force-app/main/default/objects/Git_Snapshot__c/Git_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Git Snapshot</label>
    <nameField>
        <displayFormat>GS-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>