force-app/main/default/objects/Git_Snapshot__c/fields/Commit_Author__c.field-meta.xml
<CustomField>
    <fullName>Commit_Author__c</fullName>
    <label>Commit Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>