force-app/main/default/objects/Git_Snapshot__c/fields/Commit_Email__c.field-meta.xml
<CustomField>
    <fullName>Commit_Email__c</fullName>
    <label>Commit Email</label>
    <type>Email</type>
</CustomField>