force-app/main/default/objects/Git_Snapshot__c/fields/Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>Commit_Message__c</fullName>
    <label>Commit Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>