force-app/main/default/objects/Git_Snapshot__c/fields/Merge_Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>Merge_Commit_Id__c</fullName>
    <label>Merge Commit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>