force-app/main/default/objects/Git_Snapshot__c/fields/Pull_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_Number__c</fullName>
    <label>Pull Request Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>