force-app/main/default/objects/Git_Snapshot__c/fields/Pull_Request_Url__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_Url__c</fullName>
    <label>Pull Request Url</label>
    <type>Url</type>
</CustomField>