force-app/main/default/objects/Git_Snapshot__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository</label>
    <referenceTo>Git_Repository__c</referenceTo>
    <relationshipLabel>Git Snapshots</relationshipLabel>
    <relationshipName>Git_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>