force-app/main/default/objects/Git_Snapshot__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Git Snapshots</relationshipLabel>
    <relationshipName>Git_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>